--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.0",
   "main": "keystone.js",
   "license": "MIT",
+  "scripts": {
+    "start": "yarn keystone dev"
+  },
   "dependencies": {
     "@keystone-6/core": "^2.0.0",
     "typescript": "^4.7.3"
