--- a/package.json
+++ b/package.json
@@ -8,6 +8,16 @@
   },
   "dependencies": {
     "@keystone-6/core": "^2.0.0",
+    "@keystone-6/fields-document": "^3.0.0",
     "typescript": "^4.7.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.29.0",
+    "@typescript-eslint/parser": "^5.29.0",
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-promise": "^6.0.0"
   }
 }
